# bike-share-alerts

./: .gitignore  Makefile  README.md  vercel.json
.github/workflows/: deploy.yml
backend/: .env.example
backend/api/: .pre-commit-config.yaml  Makefile  README.md  apns.py  auth.py  db.py  index.py  monitor.py  pyproject.toml  requirements.txt  routes.py  stations.py  vercel.json
backend/api/admin/: README.md  admin.py
backend/api/routers/: __init__.py  admin.py  cron.py  monitor.py  routes.py  stations.py  trips.py  users.py
backend/api/tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_trips.py  test_trips_api.py  test_users.py
backend/collector/: go.mod  go.sum  main.go
backend/collector/api/: collector.go
backend/database/: schema.sql
backend/database/migrations/: 001_init.sql  002_add_current_station_status.sql  003_api_keys.sql  004_schema_updates.sql  005_station_ids_to_arrays.sql  006_convert_stations_to_integer.sql  007_add_trips_table.sql  008_convert_current_station_status_to_integer.sql
backend/migrate/: go.mod  main.go
cloudflare-worker/: README.md  worker.js  wrangler.toml
ios/BikeShareAlerts/BikeShareAlerts/: BikeShareAlertsApp.swift  ContentView.swift
ios/BikeShareAlerts/BikeShareAlerts/Models/: Route.swift
ios/BikeShareAlerts/BikeShareAlerts/Services/: APIService.swift  ActivityManager.swift  LocationManager.swift  NotificationManager.swift
ios/BikeShareAlerts/BikeShareAlerts/Views/: RouteListView.swift  SettingsView.swift
ios/BikeShareAlerts/BikeShareAlertsWidget/: BikeShareAlertsWidget.swift
