[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.28.1",
]

[project.scripts]
app = "api.index:app"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
pythonpath = ["..", "."]
testpaths = ["tests"]
